// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation component renders English correctly 1`] = `
<div>
  <nav
    class="sc-bdnxRM jdHmZT"
  >
    <div
      aria-controls="primary-menu"
      aria-expanded="false"
      class="sc-gtsrHT iyLpWA"
    >
      <div
        class="sc-dlnjwi fodIaX"
      />
      <div
        class="sc-dlnjwi fodIaX"
      />
      <div
        class="sc-dlnjwi fodIaX"
      />
    </div>
    <ul
      class="sc-hKFxyN jSDNlB"
      id="primary-menu"
    >
      <li
        class="sc-eCApnc jNSuCc"
      >
        <a
          class="sc-jSFjdj bKklDm"
          href="/en"
        >
          Front Page
        </a>
      </li>
      <li
        class="sc-eCApnc jNSuCc"
      >
        <a
          class="sc-gKAaRy gcdywK"
          href="/en#portfolio"
        >
          Portfolio
        </a>
      </li>
      <li
        class="sc-eCApnc jNSuCc"
      >
        <a
          class="sc-gKAaRy gcdywK"
          href="/en#contact"
        >
          Contact
        </a>
      </li>
      <li
        class="sc-eCApnc jNSuCc"
      >
        <a
          class="sc-jSFjdj bKklDm"
          href="/en/blog"
        >
          Blog
        </a>
      </li>
    </ul>
  </nav>
  ,
</div>
`;

exports[`Navigation component renders Finnish correctly 1`] = `
<div>
  <nav
    class="sc-bdnxRM jdHmZT"
  >
    <div
      aria-controls="primary-menu"
      aria-expanded="false"
      class="sc-gtsrHT iyLpWA"
    >
      <div
        class="sc-dlnjwi fodIaX"
      />
      <div
        class="sc-dlnjwi fodIaX"
      />
      <div
        class="sc-dlnjwi fodIaX"
      />
    </div>
    <ul
      class="sc-hKFxyN jSDNlB"
      id="primary-menu"
    >
      <li
        class="sc-eCApnc jNSuCc"
      >
        <a
          class="sc-jSFjdj bKklDm"
          href="/"
        >
          Etusivu
        </a>
      </li>
      <li
        class="sc-eCApnc jNSuCc"
      >
        <a
          class="sc-gKAaRy gcdywK"
          href="/#portfolio"
        >
          Portfolio
        </a>
      </li>
      <li
        class="sc-eCApnc jNSuCc"
      >
        <a
          class="sc-gKAaRy gcdywK"
          href="/#yhteystiedot"
        >
          Yhteystiedot
        </a>
      </li>
      <li
        class="sc-eCApnc jNSuCc"
      >
        <a
          class="sc-jSFjdj bKklDm"
          href="/blogi"
        >
          Blogi
        </a>
      </li>
    </ul>
  </nav>
  ,
</div>
`;
